--- a/supervision/index.html
+++ b/supervision/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="PhD  Taiwo Akindele (Victoria University of Wellington, 2020): &#34;Resource Allocation problem in Cloud&#34; (with Dr Hui Ma) **Shaolin Wang** (Victoria University of Wellington, 2019): &#34;Genetic Programming for Uncertain Arc Routing Problem&#34; (with Prof Mengjie Zhang) **Joao Costa** (Victoria University of Wellington, 2019): &#34;Hyper-heuristic for Vehicle Routing&#34; (with Prof Mengjie Zhang) **Amirhossein Mostofi** (Victoria University of Wellington, 2019): &#34;Optimisation in Pharmecautical Supply Chain Management&#34; (with Dr Vipul Jain) **Shubhangi Patel** (Victoria University of Wellington, 2019): &#34;">
+  <meta name="description" content="PhD  Taiwo Akindele (Victoria University of Wellington, 2020): &#34;Resource Allocation problem in Cloud&#34; (with Dr Hui Ma) Shaolin Wang (Victoria University of Wellington, 2019): &#34;Genetic Programming for Uncertain Arc Routing Problem&#34; (with Prof Mengjie Zhang) **Joao Costa** (Victoria University of Wellington, 2019): &#34;Hyper-heuristic for Vehicle Routing&#34; (with Prof Mengjie Zhang) **Amirhossein Mostofi** (Victoria University of Wellington, 2019): &#34;Optimisation in Pharmecautical Supply Chain Management&#34; (with Dr Vipul Jain) **Shubhangi Patel** (Victoria University of Wellington, 2019): &#34;">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/supervision/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/supervision/">
   <meta property="og:title" content="Supervision | Yi Mei @ VUW">
-  <meta property="og:description" content="PhD  Taiwo Akindele (Victoria University of Wellington, 2020): &#34;Resource Allocation problem in Cloud&#34; (with Dr Hui Ma) **Shaolin Wang** (Victoria University of Wellington, 2019): &#34;Genetic Programming for Uncertain Arc Routing Problem&#34; (with Prof Mengjie Zhang) **Joao Costa** (Victoria University of Wellington, 2019): &#34;Hyper-heuristic for Vehicle Routing&#34; (with Prof Mengjie Zhang) **Amirhossein Mostofi** (Victoria University of Wellington, 2019): &#34;Optimisation in Pharmecautical Supply Chain Management&#34; (with Dr Vipul Jain) **Shubhangi Patel** (Victoria University of Wellington, 2019): &#34;"><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="PhD  Taiwo Akindele (Victoria University of Wellington, 2020): &#34;Resource Allocation problem in Cloud&#34; (with Dr Hui Ma) Shaolin Wang (Victoria University of Wellington, 2019): &#34;Genetic Programming for Uncertain Arc Routing Problem&#34; (with Prof Mengjie Zhang) **Joao Costa** (Victoria University of Wellington, 2019): &#34;Hyper-heuristic for Vehicle Routing&#34; (with Prof Mengjie Zhang) **Amirhossein Mostofi** (Victoria University of Wellington, 2019): &#34;Optimisation in Pharmecautical Supply Chain Management&#34; (with Dr Vipul Jain) **Shubhangi Patel** (Victoria University of Wellington, 2019): &#34;"><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -508,7 +508,7 @@
 
 <ol>
 <li><b>Taiwo Akindele</b> (Victoria University of Wellington, 2020): "Resource Allocation problem in Cloud" (with Dr Hui Ma)</li>
-<li>**Shaolin Wang** (Victoria University of Wellington, 2019): "Genetic Programming for Uncertain Arc Routing Problem" (with Prof Mengjie Zhang)</li>
+<li><b>Shaolin Wang</b> (Victoria University of Wellington, 2019): "Genetic Programming for Uncertain Arc Routing Problem" (with Prof Mengjie Zhang)</li>
 <li>**Joao Costa** (Victoria University of Wellington, 2019): "Hyper-heuristic for Vehicle Routing" (with Prof Mengjie Zhang)</li>
 <li>**Amirhossein Mostofi** (Victoria University of Wellington, 2019): "Optimisation in Pharmecautical Supply Chain Management" (with Dr Vipul Jain)</li>
 <li>**Shubhangi Patel** (Victoria University of Wellington, 2019): "Operations research in medical scheduling" (with Dr Vipul Jain)</li>
@@ -519,7 +519,7 @@
 <li>**Boxiong Tan** (Victoria University of Wellington, 2016): "Evolutionary Web Service Provisioning and Scheduling" (with Dr Hui Ma)</li>
 <li>**Atiya Masood** (Victoria University of Wellington, 2015): "Many-Objective Job Shop Scheduling" (with Dr Aaron Chen, and Prof Mengjie Zhang)</li>
 <li>**Guanqiang Gao** (Beijing Institute of Technology): "Evolutionary Computation for Robot Pathfinding and Resource Allocation" (with A/Prof Will Browne and A/Prof Bin Xin)</li>
-<li>*__Binzi Xu__ (Jiangnan University, China): "Intelligent Optimisation Methods for Production Scheduling" <a href="https://www.cnki.net/KCMS/detail/detail.aspx?dbcode=CDFD&QueryID=0&CurRec=1&dbname=CDFDTEMP&filename=1020007558.nh&urlid=&yx=&v=MDc0NzRxVHJXTTFGckNVUjdxZll1UnNGeW5sVnIvSlZGMjVIck80R2RUSnA1RWJQSVI4ZVgxTHV4WVM3RGgxVDM=">[PhD thesis (in Chinese)]</a> (with Prof Yan Wang)*</li>
+<li><i>__Binzi Xu__ (Jiangnan University, China): "Intelligent Optimisation Methods for Production Scheduling" <a href="https://www.cnki.net/KCMS/detail/detail.aspx?dbcode=CDFD&QueryID=0&CurRec=1&dbname=CDFDTEMP&filename=1020007558.nh&urlid=&yx=&v=MDc0NzRxVHJXTTFGckNVUjdxZll1UnNGeW5sVnIvSlZGMjVIck80R2RUSnA1RWJQSVI4ZVgxTHV4WVM3RGgxVDM=">[PhD thesis (in Chinese)]</a> (with Prof Yan Wang)</i></li>
 <li>*__John Park__ (Victoria University of Wellington, graduated in 2019): "Evolving Dispatching Rules for Dynamic Job Shop Scheduling Problems using Genetic Programming" <a href="http://researcharchive.vuw.ac.nz/handle/10063/8186">[PhD thesis]</a> (with Dr Aaron Chen, Dr Su Nguyen, and Prof Mengjie Zhang)*</li>
 <li>*__Deepak Karunakaran__ (Victoria University of Wellington, graduated in 2019): "Active Learning Methods for Dynamic Job Shop Scheduling using Genetic Programming under Uncertain Environment" <a href="http://researcharchive.vuw.ac.nz/handle/10063/8614">[PhD thesis]</a> (with Dr Aaron Chen, and Prof Mengjie Zhang)*</li>
 <li>*__Alexandre Sawczuk Da Silva__ (Victoria University of Wellington, graduated in 2019): "Evolutionary Computation for Multifaceted Web Service Composition" <a href="http://researcharchive.vuw.ac.nz/handle/10063/8014">[PhD thesis]</a> (with Dr Hui Ma, and Prof Mengjie Zhang)*</li>
