--- a/publication-journal_bib.html
+++ b/publication-journal_bib.html
@@ -7,7 +7,19 @@
 </head>
 
 <body>
-<h1>publication-journal.bib</h1><a name="da2020survey"></a><pre>
+<h1>publication-journal.bib</h1><a name="xu2020genetic"></a><pre>
+@article{<a href="publication-journal.html#xu2020genetic">xu2020genetic</a>,
+  title = {Genetic Programming with Delayed Routing for Multi-Objective Dynamic Flexible Job Shop Scheduling},
+  author = {Xu, Binzi and Mei, Yi and Wang, Yan and Ji, Zhicheng and Zhang, Mengjie},
+  journal = {Evolutionary Computation},
+  month = {apr},
+  year = {2020},
+  publisher = {MIT Press},
+  doi = {10.1162/evco_a_00273}
+}
+</pre>
+
+<a name="da2020survey"></a><pre>
 @article{<a href="publication-journal.html#da2020survey">da2020survey</a>,
   title = {A Survey of Evolutionary Computation for Web Service Composition: A Technical Perspective},
   author = {da Silva, Alexandre Sawczuk and Ma, Hui and Mei, Yi and Zhang, Mengjie},
