--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -41,9 +41,9 @@ Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
  A multi-objective genetic programming hyper-heuristic approach to
   uncertain capacitated arc routing problems.
  In <em>Proceedings of the IEEE World Congress on Computational
-  Intelligence</em>. IEEE, mar 2020.
+  Intelligence</em>, pages 1--8. IEEE, mar 2020.
 [&nbsp;<a href="publication-accepted_bib.html#wang2020multi">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/CEC48606.2020.9185890">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -58,9 +58,9 @@ Jericho Jackson, Yi&nbsp;Mei, and Mengjie Zhang.
  Genetic programming hyper-heuristic with cluster awareness for
   stochastic team orienteering problem with time windows.
  In <em>Proceedings of the IEEE World Congress on Computational
-  Intelligence</em>. IEEE, mar 2020.
+  Intelligence</em>, pages 1--8. IEEE, mar 2020.
 [&nbsp;<a href="publication-accepted_bib.html#jackson2020genetic">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/CEC48606.2020.9185911">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -75,9 +75,9 @@ Joao Guilherme&nbsp;Cavalcanti Costa, Yi&nbsp;Mei, and Mengjie Zhang.
  Cluster-based hyper-heuristic for the large-scale vehicle routing
   problem.
  In <em>Proceedings of the IEEE World Congress on Computational
-  Intelligence</em>. IEEE, mar 2020.
+  Intelligence</em>, pages 1--8. IEEE, mar 2020.
 [&nbsp;<a href="publication-accepted_bib.html#costa2020cluster">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/CEC48606.2020.9185831">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -92,9 +92,9 @@ Guanqiang Gao, Yi&nbsp;Mei, Bin Xin, Ya-Hui Jia, and Will Browne.
  A memetic algorithm for the task allocation problem on multi-robot
   multi-point dynamic aggregation missions.
  In <em>Proceedings of the IEEE World Congress on Computational
-  Intelligence</em>. IEEE, mar 2020.
+  Intelligence</em>, pages 1--8. IEEE, mar 2020.
 [&nbsp;<a href="publication-accepted_bib.html#gao2020memetic">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/CEC48606.2020.9185647">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -109,9 +109,9 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
  Genetic programming hyper-heuristics with probabilistic prototype
   tree knowledge transfer for uncertain capacitated arc routing problems.
  In <em>Proceedings of the IEEE World Congress on Computational
-  Intelligence</em>. IEEE, mar 2020.
+  Intelligence</em>, pages 1--8. IEEE, mar 2020.
 [&nbsp;<a href="publication-accepted_bib.html#ardeh2020genetic">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/CEC48606.2020.9185714">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -126,9 +126,9 @@ Atiya Masood, Gang Chen, Yi&nbsp;Mei, Harith Al-Sahaf, and Mengjie Zhang.
  A fitness-based selection method for pareto local search for
   many-objective job shop scheduling.
  In <em>Proceedings of the IEEE World Congress on Computational
-  Intelligence</em>. IEEE, mar 2020.
+  Intelligence</em>, pages 1--8. IEEE, mar 2020.
 [&nbsp;<a href="publication-accepted_bib.html#masood2020fitness">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/CEC48606.2020.9185881">DOI</a>&nbsp;]
 
 </td>
 </tr>
