--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -27,11 +27,11 @@
   title = {A Multi-Objective Genetic Programming Hyper-Heuristic Approach to Uncertain Capacitated Arc Routing Problems},
   author = {Wang, Shaolin and Mei, Yi and Zhang, Mengjie},
   booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
-  pages = {},
+  pages = {1--8},
   year = {2020},
   month = {mar},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/CEC48606.2020.9185890}
 }
 </pre>
 
@@ -40,11 +40,11 @@
   title = {Genetic Programming Hyper-heuristic with Cluster Awareness for Stochastic Team Orienteering Problem with Time Windows},
   author = {Jackson, Jericho and Mei, Yi and Zhang, Mengjie},
   booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
-  pages = {},
+  pages = {1--8},
   year = {2020},
   month = {mar},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/CEC48606.2020.9185911}
 }
 </pre>
 
@@ -53,11 +53,11 @@
   title = {Cluster-based Hyper-Heuristic for the Large-Scale Vehicle Routing Problem},
   author = {Costa, Joao Guilherme Cavalcanti and Mei, Yi and Zhang, Mengjie},
   booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
-  pages = {},
+  pages = {1--8},
   year = {2020},
   month = {mar},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/CEC48606.2020.9185831}
 }
 </pre>
 
@@ -66,11 +66,11 @@
   title = {A Memetic Algorithm for the Task Allocation Problem on Multi-robot Multi-point Dynamic Aggregation Missions},
   author = {Gao, Guanqiang and Mei, Yi and Xin, Bin and Jia, Ya-Hui and Browne, Will},
   booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
-  pages = {},
+  pages = {1--8},
   year = {2020},
   month = {mar},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/CEC48606.2020.9185647}
 }
 </pre>
 
@@ -79,11 +79,11 @@
   title = {Genetic Programming Hyper-Heuristics with Probabilistic Prototype Tree Knowledge Transfer for Uncertain Capacitated Arc Routing Problems},
   author = {Ardeh, Mazhar Ansari and Mei, Yi and Zhang, Mengjie},
   booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
-  pages = {},
+  pages = {1--8},
   year = {2020},
   month = {mar},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/CEC48606.2020.9185714}
 }
 </pre>
 
@@ -92,11 +92,11 @@
   title = {A Fitness-based Selection Method for Pareto Local Search for Many-Objective Job Shop Scheduling},
   author = {Masood, Atiya and Chen, Gang and Mei, Yi and Al-Sahaf, Harith and Zhang, Mengjie},
   booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
-  pages = {},
+  pages = {1--8},
   year = {2020},
   month = {mar},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/CEC48606.2020.9185881}
 }
 </pre>
 
