--- a/publication/index.html
+++ b/publication/index.html
@@ -1904,6 +1904,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/CEC48606.2020.9185911" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 </p>
 
@@ -1993,6 +1997,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/CEC48606.2020.9185714" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 </p>
 
@@ -2081,6 +2089,10 @@
 
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/CEC48606.2020.9185831" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 </p>
@@ -2174,6 +2186,10 @@
 
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/CEC48606.2020.9185890" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 </p>
@@ -2278,6 +2294,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/CEC48606.2020.9185647" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 </p>
 
@@ -2380,6 +2400,10 @@
 
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/CEC48606.2020.9185881" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 </p>
