--- a/publication-conf_bib.html
+++ b/publication-conf_bib.html
@@ -7,7 +7,85 @@
 </head>
 
 <body>
-<h1>publication-conf.bib</h1><a name="jia2020memetic"></a><pre>
+<h1>publication-conf.bib</h1><a name="wang2020multi"></a><pre>
+@inproceedings{<a href="publication-conf.html#wang2020multi">wang2020multi</a>,
+  title = {A Multi-Objective Genetic Programming Hyper-Heuristic Approach to Uncertain Capacitated Arc Routing Problems},
+  author = {Wang, Shaolin and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
+  pages = {1--8},
+  year = {2020},
+  month = {mar},
+  organization = {IEEE},
+  doi = {10.1109/CEC48606.2020.9185890}
+}
+</pre>
+
+<a name="jackson2020genetic"></a><pre>
+@inproceedings{<a href="publication-conf.html#jackson2020genetic">jackson2020genetic</a>,
+  title = {Genetic Programming Hyper-heuristic with Cluster Awareness for Stochastic Team Orienteering Problem with Time Windows},
+  author = {Jackson, Jericho and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
+  pages = {1--8},
+  year = {2020},
+  month = {mar},
+  organization = {IEEE},
+  doi = {10.1109/CEC48606.2020.9185911}
+}
+</pre>
+
+<a name="costa2020cluster"></a><pre>
+@inproceedings{<a href="publication-conf.html#costa2020cluster">costa2020cluster</a>,
+  title = {Cluster-based Hyper-Heuristic for the Large-Scale Vehicle Routing Problem},
+  author = {Costa, Joao Guilherme Cavalcanti and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
+  pages = {1--8},
+  year = {2020},
+  month = {mar},
+  organization = {IEEE},
+  doi = {10.1109/CEC48606.2020.9185831}
+}
+</pre>
+
+<a name="gao2020memetic"></a><pre>
+@inproceedings{<a href="publication-conf.html#gao2020memetic">gao2020memetic</a>,
+  title = {A Memetic Algorithm for the Task Allocation Problem on Multi-robot Multi-point Dynamic Aggregation Missions},
+  author = {Gao, Guanqiang and Mei, Yi and Xin, Bin and Jia, Ya-Hui and Browne, Will},
+  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
+  pages = {1--8},
+  year = {2020},
+  month = {mar},
+  organization = {IEEE},
+  doi = {10.1109/CEC48606.2020.9185647}
+}
+</pre>
+
+<a name="ardeh2020genetic"></a><pre>
+@inproceedings{<a href="publication-conf.html#ardeh2020genetic">ardeh2020genetic</a>,
+  title = {Genetic Programming Hyper-Heuristics with Probabilistic Prototype Tree Knowledge Transfer for Uncertain Capacitated Arc Routing Problems},
+  author = {Ardeh, Mazhar Ansari and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
+  pages = {1--8},
+  year = {2020},
+  month = {mar},
+  organization = {IEEE},
+  doi = {10.1109/CEC48606.2020.9185714}
+}
+</pre>
+
+<a name="masood2020fitness"></a><pre>
+@inproceedings{<a href="publication-conf.html#masood2020fitness">masood2020fitness</a>,
+  title = {A Fitness-based Selection Method for Pareto Local Search for Many-Objective Job Shop Scheduling},
+  author = {Masood, Atiya and Chen, Gang and Mei, Yi and Al-Sahaf, Harith and Zhang, Mengjie},
+  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
+  pages = {1--8},
+  year = {2020},
+  month = {mar},
+  organization = {IEEE},
+  doi = {10.1109/CEC48606.2020.9185881}
+}
+</pre>
+
+<a name="jia2020memetic"></a><pre>
 @inproceedings{<a href="publication-conf.html#jia2020memetic">jia2020memetic</a>,
   title = {A Memetic Level-based Learning Swarm Optimizer for Large-scale Water Distribution Network Optimization},
   author = {Jia, Ya-Hui and Mei, Yi and Zhang, Mengjie},
