--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,7 +18,23 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2020cooperative">1</a>]
+[<a name="zhang2020evolving">1</a>]
+</td>
+<td class="bibtexitem">
+Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
+ Evolving scheduling heuristics via genetic programming with feature
+  selection in dynamic flexible job shop scheduling.
+ <em>IEEE Transactions on Cybernetics</em>, Sep 2020.
+[&nbsp;<a href="publication-accepted_bib.html#zhang2020evolving">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="tan2020cooperative">2</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
