--- a/404.html
+++ b/404.html
@@ -394,6 +394,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/zhang-2020-evolving/">Evolving Scheduling Heuristics via Genetic Programming with Feature Selection in Dynamic Flexible Job Shop Scheduling</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/tan-2020-cooperative/">A Cooperative Coevolution Genetic Programming Hyper-Heuristic Approach for On-line Resource Allocation in Container-based Clouds</a></li>
   </ul>
   
@@ -407,10 +411,6 @@
   
   <ul>
     <li><a href="/publication/tan-2020-nsga/">An NSGA-II-based Approach for Multi-objective Micro-service  Allocation in Container-based Clouds</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/zhang-2020-evolutionary/">Evolutionary Multitasking for Dynamic Flexible Job Shop Scheduling via Genetic Programming Hyper-heuristics</a></li>
   </ul>
   
   
