--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,22 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="tan2020cooperative"></a><pre>
+<h1>publication-accepted.bib</h1><a name="zhang2020evolving"></a><pre>
+@article{<a href="publication-accepted.html#zhang2020evolving">zhang2020evolving</a>,
+  title = {Evolving Scheduling Heuristics via Genetic Programming with Feature Selection in Dynamic Flexible Job Shop Scheduling},
+  author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Zhang, Mengjie},
+  journal = {IEEE Transactions on Cybernetics},
+  month = {Sep},
+  year = {2020},
+  vol = {},
+  number = {},
+  pages = {},
+  publisher = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="tan2020cooperative"></a><pre>
 @article{<a href="publication-accepted.html#tan2020cooperative">tan2020cooperative</a>,
   title = {A Cooperative Coevolution Genetic Programming Hyper-Heuristic Approach for On-line Resource Allocation in Container-based Clouds},
   author = {Tan, Boxiong and Ma, Hui and Mei, Yi and Zhang, Mengjie},
