--- a/404.html
+++ b/404.html
@@ -394,6 +394,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/jia-2020-contribution/">Contribution-based Cooperative Co-evolution for Non-separable Large-scale Problems with Overlapping Subcomponents</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/zhang-2020-evolving/">Evolving Scheduling Heuristics via Genetic Programming with Feature Selection in Dynamic Flexible Job Shop Scheduling</a></li>
   </ul>
   
@@ -407,10 +411,6 @@
   
   <ul>
     <li><a href="/publication/da-2020-survey/">A Survey of Evolutionary Computation for Web Service Composition: A Technical Perspective</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/tan-2020-nsga/">An NSGA-II-based Approach for Multi-objective Micro-service  Allocation in Container-based Clouds</a></li>
   </ul>
   
   
