--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,7 +18,23 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020evolving">1</a>]
+[<a name="jia2020contribution">1</a>]
+</td>
+<td class="bibtexitem">
+Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
+ Contribution-based cooperative co-evolution for non-separable
+  large-scale problems with overlapping subcomponents.
+ <em>IEEE Transactions on Cybernetics</em>, Sep 2020.
+[&nbsp;<a href="publication-accepted_bib.html#jia2020contribution">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="zhang2020evolving">2</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
@@ -34,7 +50,7 @@ Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2020cooperative">2</a>]
+[<a name="tan2020cooperative">3</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
