--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,22 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="zhang2020evolving"></a><pre>
+<h1>publication-accepted.bib</h1><a name="jia2020contribution"></a><pre>
+@article{<a href="publication-accepted.html#jia2020contribution">jia2020contribution</a>,
+  title = {Contribution-based Cooperative Co-evolution for Non-separable Large-scale Problems with Overlapping Subcomponents},
+  author = {Jia, Yahui and Mei, Yi and Zhang, Mengjie},
+  journal = {IEEE Transactions on Cybernetics},
+  month = {Sep},
+  year = {2020},
+  vol = {},
+  number = {},
+  pages = {},
+  publisher = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="zhang2020evolving"></a><pre>
 @article{<a href="publication-accepted.html#zhang2020evolving">zhang2020evolving</a>,
   title = {Evolving Scheduling Heuristics via Genetic Programming with Feature Selection in Dynamic Flexible Job Shop Scheduling},
   author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Zhang, Mengjie},
