--- a/publication/index.html
+++ b/publication/index.html
@@ -1030,6 +1030,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/jia-2020-contribution/jia-2020-contribution.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
