--- a/404.html
+++ b/404.html
@@ -394,6 +394,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/ardeh-2020-parametric/">A Parametric Pipeline Framework for Genetic Programming Transfer Learning in the Uncertain Capacitated Arc Routing Problem</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/jia-2020-contribution/">Contribution-based Cooperative Co-evolution for Non-separable Large-scale Problems with Overlapping Subcomponents</a></li>
   </ul>
   
@@ -407,10 +411,6 @@
   
   <ul>
     <li><a href="/publication/jia-2020-memetic/">A Memetic Level-based Learning Swarm Optimizer for Large-scale Water Distribution Network Optimization</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/da-2020-survey/">A Survey of Evolutionary Computation for Web Service Composition: A Technical Perspective</a></li>
   </ul>
   
   
