--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -24,7 +24,7 @@
 Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
  Contribution-based cooperative co-evolution for non-separable
   large-scale problems with overlapping subcomponents.
- <em>IEEE Transactions on Cybernetics</em>, Sep 2020.
+ <em>IEEE Transactions on Cybernetics</em>, sep 2020.
 [&nbsp;<a href="publication-accepted_bib.html#jia2020contribution">bib</a>&nbsp;| 
 <a href="https://doi.org/">DOI</a>&nbsp;]
 
@@ -40,7 +40,7 @@ Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
 Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
  Evolving scheduling heuristics via genetic programming with feature
   selection in dynamic flexible job shop scheduling.
- <em>IEEE Transactions on Cybernetics</em>, Sep 2020.
+ <em>IEEE Transactions on Cybernetics</em>, sep 2020.
 [&nbsp;<a href="publication-accepted_bib.html#zhang2020evolving">bib</a>&nbsp;| 
 <a href="https://doi.org/">DOI</a>&nbsp;]
 
@@ -50,7 +50,24 @@ Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2020cooperative">3</a>]
+[<a name="ardeh2020parametric">3</a>]
+</td>
+<td class="bibtexitem">
+Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
+ A parametric pipeline framework for genetic programming transfer
+  learning in the uncertain capacitated arc routing problem.
+ In <em>Proceedings of the Australasian Joint Conference on
+  Artificial Intelligence (AJCAI)</em>. Springer, sep 2020.
+[&nbsp;<a href="publication-accepted_bib.html#ardeh2020parametric">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="tan2020cooperative">4</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
