--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -12,7 +12,7 @@
   title = {Contribution-based Cooperative Co-evolution for Non-separable Large-scale Problems with Overlapping Subcomponents},
   author = {Jia, Yahui and Mei, Yi and Zhang, Mengjie},
   journal = {IEEE Transactions on Cybernetics},
-  month = {Sep},
+  month = {sep},
   year = {2020},
   vol = {},
   number = {},
@@ -27,12 +27,25 @@
   title = {Evolving Scheduling Heuristics via Genetic Programming with Feature Selection in Dynamic Flexible Job Shop Scheduling},
   author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Zhang, Mengjie},
   journal = {IEEE Transactions on Cybernetics},
-  month = {Sep},
+  month = {sep},
   year = {2020},
   vol = {},
   number = {},
   pages = {},
   publisher = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="ardeh2020parametric"></a><pre>
+@inproceedings{<a href="publication-accepted.html#ardeh2020parametric">ardeh2020parametric</a>,
+  title = {A Parametric Pipeline Framework for Genetic Programming Transfer Learning in the Uncertain Capacitated Arc Routing Problem},
+  author = {Ardeh, Mazhar Ansari and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the Australasian Joint Conference on Artificial Intelligence (AJCAI)},
+  pages = {},
+  year = {2020},
+  month = {sep},
+  organization = {Springer},
   doi = {}
 }
 </pre>
