--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,7 +18,76 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="jia2020contribution">1</a>]
+[<a name="costa2020adaptive">1</a>]
+</td>
+<td class="bibtexitem">
+Joao Costa, Yi&nbsp;Mei, and Mengjie Zhang.
+ Adaptive search space through evolutionary hyper-heuristics for the
+  large-scale vehicle routing problem.
+ In <em>Proceedings of the IEEE Symposium Series on Computational
+  Intelligence (SSCI)</em>. IEEE, sep 2020.
+[&nbsp;<a href="publication-accepted_bib.html#costa2020adaptive">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="wang2020towards">2</a>]
+</td>
+<td class="bibtexitem">
+Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
+ Towards interpretable routing policy: A two stage multi-objective
+  genetic programming approach with feature selection for uncertain capacitated
+  arc routing problem.
+ In <em>Proceedings of the IEEE Symposium Series on Computational
+  Intelligence (SSCI)</em>. IEEE, sep 2020.
+[&nbsp;<a href="publication-accepted_bib.html#wang2020towards">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="ardeh2020gphh">3</a>]
+</td>
+<td class="bibtexitem">
+Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
+ A gphh with surrogate-assisted knowledge transfer for uncertain
+  capacitated arc routing problem.
+ In <em>Proceedings of the IEEE Symposium Series on Computational
+  Intelligence (SSCI)</em>. IEEE, sep 2020.
+[&nbsp;<a href="publication-accepted_bib.html#ardeh2020gphh">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="ardeh2020diversity">4</a>]
+</td>
+<td class="bibtexitem">
+Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
+ Diversity-driven knowledge transfer for gphh to solve uncertain
+  capacited arc routing problem.
+ In <em>Proceedings of the IEEE Symposium Series on Computational
+  Intelligence (SSCI)</em>. IEEE, sep 2020.
+[&nbsp;<a href="publication-accepted_bib.html#ardeh2020diversity">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="jia2020contribution">5</a>]
 </td>
 <td class="bibtexitem">
 Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -34,7 +103,7 @@ Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020evolving">2</a>]
+[<a name="zhang2020evolving">6</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
@@ -50,7 +119,7 @@ Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020parametric">3</a>]
+[<a name="ardeh2020parametric">7</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -67,7 +136,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2020cooperative">4</a>]
+[<a name="tan2020cooperative">8</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
