--- a/404.html
+++ b/404.html
@@ -394,7 +394,15 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/ardeh-2020-gphh/">A GPHH with Surrogate-assisted Knowledge Transfer for Uncertain Capacitated Arc Routing Problem</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/ardeh-2020-parametric/">A Parametric Pipeline Framework for Genetic Programming Transfer Learning in the Uncertain Capacitated Arc Routing Problem</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/costa-2020-adaptive/">Adaptive Search Space through Evolutionary Hyper-Heuristics for the Large-Scale Vehicle Routing Problem</a></li>
   </ul>
   
   <ul>
@@ -402,15 +410,7 @@
   </ul>
   
   <ul>
-    <li><a href="/publication/zhang-2020-evolving/">Evolving Scheduling Heuristics via Genetic Programming with Feature Selection in Dynamic Flexible Job Shop Scheduling</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/tan-2020-cooperative/">A Cooperative Coevolution Genetic Programming Hyper-Heuristic Approach for On-line Resource Allocation in Container-based Clouds</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/jia-2020-memetic/">A Memetic Level-based Learning Swarm Optimizer for Large-scale Water Distribution Network Optimization</a></li>
+    <li><a href="/publication/ardeh-2020-diversity/">Diversity-driven Knowledge Transfer for GPHH to Solve Uncertain Capacited Arc Routing Problem</a></li>
   </ul>
   
   
