--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,59 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="jia2020contribution"></a><pre>
+<h1>publication-accepted.bib</h1><a name="costa2020adaptive"></a><pre>
+@inproceedings{<a href="publication-accepted.html#costa2020adaptive">costa2020adaptive</a>,
+  title = {Adaptive Search Space through Evolutionary Hyper-Heuristics for the Large-Scale Vehicle Routing Problem},
+  author = {Costa, Joao and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the IEEE Symposium Series on Computational Intelligence (SSCI)},
+  pages = {},
+  year = {2020},
+  month = {sep},
+  organization = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="wang2020towards"></a><pre>
+@inproceedings{<a href="publication-accepted.html#wang2020towards">wang2020towards</a>,
+  title = {Towards Interpretable Routing Policy: A Two Stage Multi-Objective Genetic Programming Approach with Feature Selection for Uncertain Capacitated Arc Routing Problem},
+  author = {Wang, Shaolin and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the IEEE Symposium Series on Computational Intelligence (SSCI)},
+  pages = {},
+  year = {2020},
+  month = {sep},
+  organization = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="ardeh2020gphh"></a><pre>
+@inproceedings{<a href="publication-accepted.html#ardeh2020gphh">ardeh2020gphh</a>,
+  title = {A GPHH with Surrogate-assisted Knowledge Transfer for Uncertain Capacitated Arc Routing Problem},
+  author = {Ardeh, Mazhar Ansari and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the IEEE Symposium Series on Computational Intelligence (SSCI)},
+  pages = {},
+  year = {2020},
+  month = {sep},
+  organization = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="ardeh2020diversity"></a><pre>
+@inproceedings{<a href="publication-accepted.html#ardeh2020diversity">ardeh2020diversity</a>,
+  title = {Diversity-driven Knowledge Transfer for GPHH to Solve Uncertain Capacited Arc Routing Problem},
+  author = {Ardeh, Mazhar Ansari and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the IEEE Symposium Series on Computational Intelligence (SSCI)},
+  pages = {},
+  year = {2020},
+  month = {sep},
+  organization = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="jia2020contribution"></a><pre>
 @article{<a href="publication-accepted.html#jia2020contribution">jia2020contribution</a>,
   title = {Contribution-based Cooperative Co-evolution for Non-separable Large-scale Problems with Overlapping Subcomponents},
   author = {Jia, Yahui and Mei, Yi and Zhang, Mengjie},
