--- a/index.html
+++ b/index.html
@@ -765,6 +765,7 @@
 <h3 id="grants">Grants</h3>
 
 <ul>
+<li><strong>2021-</strong>, &ldquo;&rdquo;, 62072234, <strong>National Natural Science Foundation of China</strong>, &yen;xx RMB (Overseas AI)</li>
 <li><strong>2021-</strong>, &ldquo;&rdquo;, 62073155, <strong>National Natural Science Foundation of China</strong>, &yen;xx RMB (Overseas AI)</li>
 <li><strong>2020-2027</strong>, &ldquo;A data-science driven evolution of aquaculture for building the blue economy (AI/ML Advanced Research and Applications to Aquaculture)&rdquo;. <strong>MBIE SSIF Fund on Data Science</strong>, $13,000,000 NZD. (Key Researcher)</li>
 <li><strong>2019-2020</strong>, &ldquo;AI/ML techniques for Waste Collection in NZ&rdquo;, <strong>industrial project with <a href="https://www.northlandwaste.co.nz">Northland Waste</a></strong>, $16,000 NZD. (PI)</li>
