--- a/cec2021-esco/index.html
+++ b/cec2021-esco/index.html
@@ -407,7 +407,7 @@
   <h1 itemprop="name">Special Session: Evolutionary Scheduling and Combinatorial Optimization</h1>
 
   
-  <p class="page-subtitle">The IEEE Congress on Evolutionary Computation (CEC) 2021<br/>18 June-01 July 2020, Kraków, Poland</p>
+  <p class="page-subtitle">The IEEE Congress on Evolutionary Computation (CEC) 2021<br/>18 June - 01 July 2020, Kraków, Poland</p>
   
 
   
@@ -506,9 +506,9 @@
     <div class="article-style" itemprop="articleBody">
       
 
-<h2 id="overview">Overview</h2>
+<p><img src="static/img/jss.PNG" alt="Job shop scheduling" /></p>
 
-<p><img src="jss.PNG" alt="Job shop scheduling" /></p>
+<h2 id="overview">Overview</h2>
 
 <p>Evolutionary scheduling and combinatorial optimization (ESCO) is an important research area at the interface of artificial intelligence (AI) and operations research (OR). ESCO has attracted the attentions of researchers over the years due to its applicability and interesting computational aspects. Evolutionary Computation (EC) techniques are suitable for these problems since they are highly flexible regarding handling constraints, dynamic changes, and multiple conflicting objectives. With the growth of new technologies and business models, researchers in this field have to continuously face new challenges, which required innovated solution methods.</p>
 
