--- a/cec2021-esco/index.html
+++ b/cec2021-esco/index.html
@@ -506,7 +506,9 @@
     <div class="article-style" itemprop="articleBody">
       
 
-<p><img src="static/img/jss.PNG" alt="Job shop scheduling" /></p>
+<p align="center">
+  <img src="/Users/yimei/Dropbox/homepage/static/img/jss.PNG" height="300" /> <img src="/Users/yimei/Dropbox/homepage/static/img/vrp.PNG" height="300" />
+</p>
 
 <h2 id="overview">Overview</h2>
 
