--- a/cec2021-esco/index.html
+++ b/cec2021-esco/index.html
@@ -507,7 +507,7 @@
       
 
 <p align="center">
-  <img src="/Users/yimei/Dropbox/homepage/static/img/jss.png" /> <img src="/Users/yimei/Dropbox/homepage/static/img/vrp.png" />
+  <img src="/img/jss.png" /> <img src="/img/vrp.png" />
 </p>
 
 <h2 id="overview">Overview</h2>
