--- a/cec2021-esco/index.html
+++ b/cec2021-esco/index.html
@@ -506,6 +506,8 @@
     <div class="article-style" itemprop="articleBody">
       
 
+<p><img src="/img/jss.png" alt="1" /></p>
+
 <p align="center">
   <img src="/img/jss.png" /> <img src="/img/vrp.png" />
 </p>
