--- a/cec2021-esco/index.html
+++ b/cec2021-esco/index.html
@@ -506,10 +506,10 @@
     <div class="article-style" itemprop="articleBody">
       
 
-<p><img src="/img/jss.png" alt="1" /></p>
-
 <p align="center">
-  <img src="/img/jss.png" /> <img src="/img/vrp.png" />
+  <img src="/img/jss.png" height="200" /> 
+
+  <img src="/img/vrp.png" height="200" /> <img src="/img/cloud.jpg" height="200" />
 </p>
 
 <h2 id="overview">Overview</h2>
