--- a/cec2021-esco/index.html
+++ b/cec2021-esco/index.html
@@ -507,9 +507,16 @@
       
 
 <p align="center">
-  <img src="/img/jss.png" height="200" /> 
+  <img src="/img/jss.png" /> 
 
-  <img src="/img/vrp.png" height="200" /> <img src="/img/cloud.jpg" height="200" />
+  <div class="row">
+  <div class="column">
+    <img src="/img/vrp.png" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="/img/cloud.jpg" style="width:100%">
+  </div>
+</div>
 </p>
 
 <h2 id="overview">Overview</h2>
