--- a/cec2021-esco/index.html
+++ b/cec2021-esco/index.html
@@ -506,18 +506,9 @@
     <div class="article-style" itemprop="articleBody">
       
 
-<p align="center">
-  <img src="/img/jss.png" /> 
+<p><img src="/img/jss.png" alt="" /></p>
 
-  <div class="row">
-  <div class="column">
-    <img src="/img/vrp.png" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="/img/cloud.jpg" style="width:100%">
-  </div>
-</div>
-</p>
+<p><img src="/img/vrp.png" alt="" /> <img src="/img/cloud.jpg" alt="" /></p>
 
 <h2 id="overview">Overview</h2>
 
