--- a/cec2021-esco/index.html
+++ b/cec2021-esco/index.html
@@ -28,8 +28,7 @@
   
     
   
-  <meta name="description" content="| | |
-Overview Evolutionary scheduling and combinatorial optimization (ESCO) is an important research area at the interface of artificial intelligence (AI) and operations research (OR). ESCO has attracted the attentions of researchers over the years due to its applicability and interesting computational aspects. Evolutionary Computation (EC) techniques are suitable for these problems since they are highly flexible regarding handling constraints, dynamic changes, and multiple conflicting objectives. With the growth of new technologies and business models, researchers in this field have to continuously face new challenges, which required innovated solution methods.">
+  <meta name="description" content="Overview Evolutionary scheduling and combinatorial optimization (ESCO) is an important research area at the interface of artificial intelligence (AI) and operations research (OR). ESCO has attracted the attentions of researchers over the years due to its applicability and interesting computational aspects. Evolutionary Computation (EC) techniques are suitable for these problems since they are highly flexible regarding handling constraints, dynamic changes, and multiple conflicting objectives.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/cec2021-esco/">
@@ -121,8 +120,7 @@ Overview Evolutionary scheduling and combinatorial optimization (ESCO) is an imp
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/cec2021-esco/">
   <meta property="og:title" content="Special Session: Evolutionary Scheduling and Combinatorial Optimization | Yi Mei @ VUW">
-  <meta property="og:description" content="| | |
-Overview Evolutionary scheduling and combinatorial optimization (ESCO) is an important research area at the interface of artificial intelligence (AI) and operations research (OR). ESCO has attracted the attentions of researchers over the years due to its applicability and interesting computational aspects. Evolutionary Computation (EC) techniques are suitable for these problems since they are highly flexible regarding handling constraints, dynamic changes, and multiple conflicting objectives. With the growth of new technologies and business models, researchers in this field have to continuously face new challenges, which required innovated solution methods."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="Overview Evolutionary scheduling and combinatorial optimization (ESCO) is an important research area at the interface of artificial intelligence (AI) and operations research (OR). ESCO has attracted the attentions of researchers over the years due to its applicability and interesting computational aspects. Evolutionary Computation (EC) techniques are suitable for these problems since they are highly flexible regarding handling constraints, dynamic changes, and multiple conflicting objectives."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -510,7 +508,21 @@ Overview Evolutionary scheduling and combinatorial optimization (ESCO) is an imp
 
 <p><img src="/img/jss.png" alt="" /></p>
 
-<p>| <img src="/img/vrp.png" alt="" /> | <img src="/img/cloud.jpg" alt="" /> |</p>
+<table>
+<thead>
+<tr>
+<th align="center"></th>
+<th align="center"></th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+<td align="center"><img src="/img/vrp.png" alt="" /></td>
+<td align="center"><img src="/img/cloud.jpg" alt="" /></td>
+</tr>
+</tbody>
+</table>
 
 <h2 id="overview">Overview</h2>
 
