--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -504,7 +504,7 @@
     <div class="article-style" itemprop="articleBody">
       <ul>
 <li>2020/09/30，<strong><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></strong>, proposal practice</li>
-<li>2020/09/30, <strong><a href="https://ecs.victoria.ac.nz/Main/GradFangFangZhang">Fangfang Zhang</a></strong>, phenotypic characterisation for scheduling dispatching rules, based on the paper <a href="https://www.mitpressjournals.org/doi/full/10.1162/EVCO_a_00133">&ldquo;On Using Surrogates with Genetic Programming&rdquo;</a>, Evolutionary Computation, vol. 23, no. 3, pp. 343&ndash;367, 2015.</li>
+<li>2020/09/30, <strong><a href="https://ecs.victoria.ac.nz/Main/GradFangFangZhang">Fangfang Zhang</a></strong>, phenotypic characterisation for scheduling dispatching rules, based on the paper &ldquo;<a href="https://www.mitpressjournals.org/doi/full/10.1162/EVCO_a_00133">On Using Surrogates with Genetic Programming</a>&rdquo;, <em>Evolutionary Computation</em>, vol. 23, no. 3, pp. 343&ndash;367, 2015.</li>
 <li>2020/09/23, <strong><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></strong>, genetic programming hyper-heuristic for dynamic workflow scheduling, proposal seminar practice</li>
 <li>2020/09/16, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></strong>, new GP transfer approaches for UCARP</li>
 <li>2020/09/09, <strong><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></strong>, evaluation methods for interpretability in AI and GP</li>
