--- a/index.html
+++ b/index.html
@@ -543,7 +543,8 @@
 <h3 id="news">NEWS</h3>
 
 <ul>
-<li><font color="red"><strong>[PhD Vacancy]</strong></font> I am looking for PhD/MSc/Honours/Summer Research students in <strong>Evolutionary Computation and Machine Learning for Scheduling and Combinatorial Optimisation</strong>. If you have similar research interests with me, please do not hesitate to <a href="#contact">contact</a> me.
+<li><font color="red"><strong>[PhD Vacancy]</strong></font> I am looking for PhD/MSc/Honours/Summer Research students in <strong>Evolutionary Computation and Machine Learning for Scheduling and Combinatorial Optimisation</strong>. If you have similar research interests with me, please do not hesitate to <a href="#contact">contact</a> me.</li>
+<li><font color="red"><strong>[Call for papers]</strong></font> We are organising <a href="https://meiyi1986.github.io/cec2021-esco/"><strong>The Special Session on Evolutionary Scheduling and Combinatorial Optimisation</strong></a> at <a href="https://cec2021.mini.pw.edu.pl"><strong>IEEE Congress on Evolutionary Computation (CEC) 2021</strong></a>. Submission due date: <strong>31 Jan, 2021</strong>.
 <!-- - <font color="red">**[Call for papers]**</font> We are organising <a href="http://ieeessci2020.org/symposiums/esco.html">**The Symposium on Evolutionary Scheduling and Combinatorial Optimisation**</a> at <a href="http://ieeessci2020.org">**IEEE Symposium Series on Computational Intelligence (SSCI) 2020**</a>. Submission due date: **7 August, 2020**. --></li>
 </ul>
 
