--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,37 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="costa2020adaptive"></a><pre>
+<h1>publication-accepted.bib</h1><a name="jia2020contribution"></a><pre>
+@article{<a href="publication-accepted.html#jia2020contribution">jia2020contribution</a>,
+  title = {Contribution-based Cooperative Co-evolution for Non-separable Large-scale Problems with Overlapping Subcomponents},
+  author = {Jia, Yahui and Mei, Yi and Zhang, Mengjie},
+  journal = {IEEE Transactions on Cybernetics},
+  month = {sep},
+  year = {2020},
+  vol = {},
+  number = {},
+  pages = {},
+  publisher = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="zhang2020evolving"></a><pre>
+@article{<a href="publication-accepted.html#zhang2020evolving">zhang2020evolving</a>,
+  title = {Evolving Scheduling Heuristics via Genetic Programming with Feature Selection in Dynamic Flexible Job Shop Scheduling},
+  author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Zhang, Mengjie},
+  journal = {IEEE Transactions on Cybernetics},
+  month = {sep},
+  year = {2020},
+  vol = {},
+  number = {},
+  pages = {},
+  publisher = {IEEE},
+  doi = {10.1109/TCYB.2020.3024849}
+}
+</pre>
+
+<a name="costa2020adaptive"></a><pre>
 @inproceedings{<a href="publication-accepted.html#costa2020adaptive">costa2020adaptive</a>,
   title = {Adaptive Search Space through Evolutionary Hyper-Heuristics for the Large-Scale Vehicle Routing Problem},
   author = {Costa, Joao and Mei, Yi and Zhang, Mengjie},
@@ -59,36 +89,6 @@
 }
 </pre>
 
-<a name="jia2020contribution"></a><pre>
-@article{<a href="publication-accepted.html#jia2020contribution">jia2020contribution</a>,
-  title = {Contribution-based Cooperative Co-evolution for Non-separable Large-scale Problems with Overlapping Subcomponents},
-  author = {Jia, Yahui and Mei, Yi and Zhang, Mengjie},
-  journal = {IEEE Transactions on Cybernetics},
-  month = {sep},
-  year = {2020},
-  vol = {},
-  number = {},
-  pages = {},
-  publisher = {IEEE},
-  doi = {}
-}
-</pre>
-
-<a name="zhang2020evolving"></a><pre>
-@article{<a href="publication-accepted.html#zhang2020evolving">zhang2020evolving</a>,
-  title = {Evolving Scheduling Heuristics via Genetic Programming with Feature Selection in Dynamic Flexible Job Shop Scheduling},
-  author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Zhang, Mengjie},
-  journal = {IEEE Transactions on Cybernetics},
-  month = {sep},
-  year = {2020},
-  vol = {},
-  number = {},
-  pages = {},
-  publisher = {IEEE},
-  doi = {}
-}
-</pre>
-
 <a name="ardeh2020parametric"></a><pre>
 @inproceedings{<a href="publication-accepted.html#ardeh2020parametric">ardeh2020parametric</a>,
   title = {A Parametric Pipeline Framework for Genetic Programming Transfer Learning in the Uncertain Capacitated Arc Routing Problem},
@@ -113,7 +113,7 @@
   number = {},
   pages = {},
   publisher = {IEEE},
-  doi = {}
+  doi = {10.1109/TCC.2020.3026338}
 }
 </pre>
 
