--- a/publication/index.html
+++ b/publication/index.html
@@ -1064,6 +1064,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/TCYB.2020.3024849" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 </p>
 
@@ -1612,6 +1616,10 @@
 
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/TCC.2020.3026338" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 </p>
