--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,7 +18,39 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="costa2020adaptive">1</a>]
+[<a name="jia2020contribution">1</a>]
+</td>
+<td class="bibtexitem">
+Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
+ Contribution-based cooperative co-evolution for non-separable
+  large-scale problems with overlapping subcomponents.
+ <em>IEEE Transactions on Cybernetics</em>, sep 2020.
+[&nbsp;<a href="publication-accepted_bib.html#jia2020contribution">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="zhang2020evolving">2</a>]
+</td>
+<td class="bibtexitem">
+Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
+ Evolving scheduling heuristics via genetic programming with feature
+  selection in dynamic flexible job shop scheduling.
+ <em>IEEE Transactions on Cybernetics</em>, sep 2020.
+[&nbsp;<a href="publication-accepted_bib.html#zhang2020evolving">bib</a>&nbsp;| 
+<a href="https://doi.org/10.1109/TCYB.2020.3024849">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="costa2020adaptive">3</a>]
 </td>
 <td class="bibtexitem">
 Joao Costa, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -35,7 +67,7 @@ Joao Costa, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="wang2020towards">2</a>]
+[<a name="wang2020towards">4</a>]
 </td>
 <td class="bibtexitem">
 Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -53,7 +85,7 @@ Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020gphh">3</a>]
+[<a name="ardeh2020gphh">5</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -70,7 +102,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020diversity">4</a>]
+[<a name="ardeh2020diversity">6</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -79,38 +111,6 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
  In <em>Proceedings of the IEEE Symposium Series on Computational
   Intelligence (SSCI)</em>. IEEE, sep 2020.
 [&nbsp;<a href="publication-accepted_bib.html#ardeh2020diversity">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right" class="bibtexnumber">
-[<a name="jia2020contribution">5</a>]
-</td>
-<td class="bibtexitem">
-Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
- Contribution-based cooperative co-evolution for non-separable
-  large-scale problems with overlapping subcomponents.
- <em>IEEE Transactions on Cybernetics</em>, sep 2020.
-[&nbsp;<a href="publication-accepted_bib.html#jia2020contribution">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right" class="bibtexnumber">
-[<a name="zhang2020evolving">6</a>]
-</td>
-<td class="bibtexitem">
-Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
- Evolving scheduling heuristics via genetic programming with feature
-  selection in dynamic flexible job shop scheduling.
- <em>IEEE Transactions on Cybernetics</em>, sep 2020.
-[&nbsp;<a href="publication-accepted_bib.html#zhang2020evolving">bib</a>&nbsp;| 
 <a href="https://doi.org/">DOI</a>&nbsp;]
 
 </td>
@@ -144,7 +144,7 @@ Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
   approach for on-line resource allocation in container-based clouds.
  <em>IEEE Transactions on Cloud Computing</em>, aug 2020.
 [&nbsp;<a href="publication-accepted_bib.html#tan2020cooperative">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/TCC.2020.3026338">DOI</a>&nbsp;]
 
 </td>
 </tr>
