--- a/publication/tan-2020-cooperative/index.html
+++ b/publication/tan-2020-cooperative/index.html
@@ -585,6 +585,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1109/TCC.2020.3026338" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
