--- a/publication/zhang-2020-evolving/index.html
+++ b/publication/zhang-2020-evolving/index.html
@@ -585,6 +585,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1109/TCYB.2020.3024849" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
