--- a/ecco/index.html
+++ b/ecco/index.html
@@ -517,8 +517,8 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <ul>
 <li><a href="https://meiyi1986.github.io">Dr. Yi Mei (Coordinator)</a>: Evolutionary Combinatorial Optimisation, Hyper-heuristics, Genetic Programming, Dynamic Optimisation, Large-Scale Optimisation</li>
 <li><a href="http://homepages.ecs.vuw.ac.nz/~mengjie/">Prof. Mengjie Zhang</a>: Evolutionary Computation and Machine Learning, Genetic Programming, Image Processing, Feature Selection</li>
-<li><a href="http://ecs.victoria.ac.nz/Main/AaronChen">Dr. Aaron Chen</a>: Reinforcement Learning, NeuroEvolution (NEAT), Evolutionary Computation for Games, Evolutionary Scheduling</li>
 <li><a href="http://ecs.victoria.ac.nz/Main/HuiMa">Dr. Hui Ma</a>: Evolutionary Resource Allocation, Web Service Composition, Cloud Computing</li>
+<li><a href="http://ecs.victoria.ac.nz/Main/AaronChen">Dr. Aaron Chen</a>: Reinforcement Learning, NeuroEvolution (NEAT), Evolutionary Computation for Games, Evolutionary Scheduling</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/YahuiJia">Dr. Yahui Jia</a>: Evolutionary Combinatorial Optimisation, Large-Scale Optimisation</li>
 <li><a href="https://ecs.wgtn.ac.nz/Main/MohammadNekooei">Mohammad Nekooei</a>: Machine learning and fuzzy logic for network scheduling</li>
 <li><a href="https://www.victoria.ac.nz/som/about/staff/vipul-jain">Dr. Vipul Jain</a>: Supply Chain Management, Operations Research</li>
@@ -532,10 +532,12 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <li><a href="https://ecs.wgtn.ac.nz/Main/GradTaiwoAdeyemiAkindele">Taiwo Akindele</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a></li>
+<li>Yifan Chen</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></li>
 <li>Guanqiang Gao</li>
 <li><a href="https://www.victoria.ac.nz/architecture/research/current-phd-research/harry-yi-he">Harry He</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradGuiyingHuang">Victoria Huang</a></li>
+<li>Zhixing Huang</li>
 <li>Jordan MacLaclan</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradAtiyaMasood">Atiya Masood</a></li>
 <li><a href="https://www.victoria.ac.nz/som/research/phd/mgmt/amirhossein-mostofi">Amirhossein Mostofi</a></li>
@@ -543,6 +545,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <li><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></li>
+<li>Meng Xu</li>
 <li><a href="http://ecs.victoria.ac.nz/Main/GradFangfangZhang">Fangfang Zhang</a></li>
 </ul>
 
