--- a/supervision/index.html
+++ b/supervision/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="PhD  Taiwo Akindele (Victoria University of Wellington, 2020): &#34;Resource Allocation problem in Cloud&#34; (with Dr Hui Ma) Shaolin Wang (Victoria University of Wellington, 2019): &#34;Genetic Programming for Uncertain Arc Routing Problem&#34; (with Prof Mengjie Zhang) Joao Costa (Victoria University of Wellington, 2019): &#34;Hyper-heuristic for Vehicle Routing&#34; (with Prof Mengjie Zhang) Amirhossein Mostofi (Victoria University of Wellington, 2019): &#34;Optimisation in Pharmecautical Supply Chain Management&#34; (with Dr Vipul Jain) Shubhangi Patel (Victoria University of Wellington, 2019): &#34;">
+  <meta name="description" content="PhD  Zhixing Huang (Victoria University of Wellington, 2020): &#34;Genetic Programming for Dynamic Scheduling&#34; (with Prof Mengjie Zhang) Meng Xu (Victoria University of Wellington, 2020): &#34;Genetic Programming for Dynamic Scheduling&#34; (with Dr Mengjie Zhang) Taiwo Akindele (Victoria University of Wellington, 2020): &#34;Resource Allocation problem in Cloud&#34; (with Dr Hui Ma) Mike Ruigrok (Victoria University of Wellington, 2020): &#34;Data Science and Multi-Criteria Decision Making for Genomics&#34; (with Prof Mengjie Zhang, A/Prof Bing Xue, Dr Linley Jesson, Dr.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/supervision/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/supervision/">
   <meta property="og:title" content="Supervision | Yi Mei @ VUW">
-  <meta property="og:description" content="PhD  Taiwo Akindele (Victoria University of Wellington, 2020): &#34;Resource Allocation problem in Cloud&#34; (with Dr Hui Ma) Shaolin Wang (Victoria University of Wellington, 2019): &#34;Genetic Programming for Uncertain Arc Routing Problem&#34; (with Prof Mengjie Zhang) Joao Costa (Victoria University of Wellington, 2019): &#34;Hyper-heuristic for Vehicle Routing&#34; (with Prof Mengjie Zhang) Amirhossein Mostofi (Victoria University of Wellington, 2019): &#34;Optimisation in Pharmecautical Supply Chain Management&#34; (with Dr Vipul Jain) Shubhangi Patel (Victoria University of Wellington, 2019): &#34;"><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="PhD  Zhixing Huang (Victoria University of Wellington, 2020): &#34;Genetic Programming for Dynamic Scheduling&#34; (with Prof Mengjie Zhang) Meng Xu (Victoria University of Wellington, 2020): &#34;Genetic Programming for Dynamic Scheduling&#34; (with Dr Mengjie Zhang) Taiwo Akindele (Victoria University of Wellington, 2020): &#34;Resource Allocation problem in Cloud&#34; (with Dr Hui Ma) Mike Ruigrok (Victoria University of Wellington, 2020): &#34;Data Science and Multi-Criteria Decision Making for Genomics&#34; (with Prof Mengjie Zhang, A/Prof Bing Xue, Dr Linley Jesson, Dr."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -507,7 +507,10 @@
 <h3 id="phd">PhD</h3>
 
 <ol>
+<li><b>Zhixing Huang</b> (Victoria University of Wellington, 2020): "Genetic Programming for Dynamic Scheduling" (with Prof Mengjie Zhang)</li>
+<li><b>Meng Xu</b> (Victoria University of Wellington, 2020): "Genetic Programming for Dynamic Scheduling" (with Dr Mengjie Zhang)</li>
 <li><b>Taiwo Akindele</b> (Victoria University of Wellington, 2020): "Resource Allocation problem in Cloud" (with Dr Hui Ma)</li>
+<li><b>Mike Ruigrok</b> (Victoria University of Wellington, 2020): "Data Science and Multi-Criteria Decision Making for Genomics" (with Prof Mengjie Zhang, A/Prof Bing Xue, Dr Linley Jesson, Dr. Maren Wellenreuther)</li>
 <li><b>Shaolin Wang</b> (Victoria University of Wellington, 2019): "Genetic Programming for Uncertain Arc Routing Problem" (with Prof Mengjie Zhang)</li>
 <li><b>Joao Costa</b> (Victoria University of Wellington, 2019): "Hyper-heuristic for Vehicle Routing" (with Prof Mengjie Zhang)</li>
 <li><b>Amirhossein Mostofi</b> (Victoria University of Wellington, 2019): "Optimisation in Pharmecautical Supply Chain Management" (with Dr Vipul Jain)</li>
@@ -556,6 +559,8 @@ Grouping Constrained Storage Location Assignment Problem" <a href="https://resea
 <h3 id="summer-research-scholarship-students">Summer Research Scholarship Students</h3>
 
 <ul>
+<li><strong>Fergus Currie</strong> (Victoria University of Wellington, 2020): &ldquo;Multi-Criteria Desicion Making for Fish Breeding Program&rdquo; (NZ Data Science Program in collaboration with Plant and Food)</li>
+<li><strong>Sai Panda</strong> (Victoria University of Wellington, 2020): &ldquo;Interpretable Genetic Programming for Scheduling&rdquo;</li>
 <li><strong>Jordan MacLachlan</strong> (Victoria University of Wellington, 2020): &ldquo;Genetic Programming for Uncertain Arc Routing&rdquo;</li>
 <li><strong>Jericho Jackson</strong> (Victoria University of Wellington, 2019): &ldquo;Genetic Programming Hyper-heuristics for Stochastic Tourist Trip Design&rdquo; (with Prof Mengjie Zhang)</li>
 <li><strong>Shaolin Wang</strong> (Victoria University of Wellington, 2018): &ldquo;Evolutionary Computation for Uncertain Arc Routing&rdquo; (with Prof Mengjie Zhang)</li>
