--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -26,7 +26,7 @@ Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
   large-scale problems with overlapping subcomponents.
  <em>IEEE Transactions on Cybernetics</em>, sep 2020.
 [&nbsp;<a href="publication-accepted_bib.html#jia2020contribution">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/TCYB.2020.3025577">DOI</a>&nbsp;]
 
 </td>
 </tr>
